--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,20 +5,30 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write  # Required for deployment
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18  # Change if needed
+
+      - name: Install dependencies
+        run: npm install  # Adjust if using yarn or pnpm
 
       - name: Build project
-        run: |
-          # Your build commands here
+        run: npm run build  # Change based on your framework
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          name: build
-          path: path/to/build
+          branch: gh-pages
+          folder: path/to/build  # Change to your actual output folder
